--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-setuptools>=42
+﻿setuptools>=42
 wheel
-﻿anyio==4.9.0
+ï»¿anyio==4.9.0
 argon2-cffi==25.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
